# Language-Learning-Library

./: .gitignore  PROJECT_HISTORY.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  main.rs  models.rs  repository.rs  scanner.rs
src/components/: AppShell.tsx  FolderTree.tsx
src/lib/: library-utils.ts  tauri-api.ts
src/types/: library.ts
windows-vm/: README.md  copy-windows-build.sh  docker-compose.yml
