[package]
name = "language-learning-library"
version = "0.1.0"
edition = "2021"
authors = ["Language Learning Library"]
description = "Offline desktop app for organizing language lessons"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.0.0"
base64 = "0.22"
